--- a/site/index.html
+++ b/site/index.html
@@ -3,5 +3,7 @@
 <head>
 	<title>Hello coursera</title>
 </head>
-<body><h1>Hello coursera. This is a great course</h1></body>
+<body><h1>Hello coursera. This is a great course</h1>
+<div style="border: 1px solid #CCC; padding: 10px;">This is another div</div>
+</body>
 </html>
